# CGmap

./: .gitignore  README.md  conversion.ipynb  pyproject.toml  setup.py  tutorial.ipynb
cgmap/: _keys.py  _version.py
cgmap/data/: make_bb_same_bead_type.ipynb
cgmap/data/backbone/: ace.yaml  ala.yaml  arg.yaml  asn.yaml  asp.yaml  cys.yaml  gln.yaml  glu.yaml  hid.yaml  hie.yaml  his.yaml  ile.yaml  leu.yaml  pro.yaml  thr.yaml  val.yaml
cgmap/data/ca/: ace.yaml  arg.yaml  asp.yaml  cys.yaml  cyx.yaml  gln.yaml  hid.yaml  hie.yaml  his.yaml  ile.yaml  leu.yaml  nme.yaml  pro.yaml  ser.yaml  thr.yaml  trp.yaml
cgmap/data/chc/: bead_types.yaml  cgbuilder.yaml  chc.yaml
cgmap/data/chc_old/: chc.yaml
cgmap/data/coh/: bead_types.yaml  coh.yaml
cgmap/data/comp13/: bead_types.yaml  comp13.yaml
cgmap/data/jn3/: bead_types.yaml  jn3.yaml
cgmap/data/martini2/: ace.yaml  ala.yaml  arg.yaml  asn.yaml  asp.yaml  bead_types.bbcommon.yaml  bead_types.yaml  cys.yaml  cyx.yaml  gln.yaml  glu.yaml  gly.yaml  hid.yaml  hie.yaml  his.yaml  hsd.yaml  hse.yaml  ile.yaml  leu.yaml  lys.yaml  met.yaml  nme.yaml  phe.yaml  pro.yaml  ser.yaml  thr.yaml  trp.yaml  tyr.yaml  val.yaml
cgmap/data/martini3/: ala.yaml  arg.yaml  asn.yaml  asp.yaml  bead_types.bbcommon.yaml  bead_types.yaml  (+29 more)
cgmap/data/martini3.membrane/: bead_types.yaml  popc.charmm36.yaml  popc.yaml
cgmap/data/martini3.membrane.noh/: chl.amber.yaml  popc.yaml
cgmap/mapping/: __init__.py  bead.py  conversion.py  mapper.py  utils.py
cgmap/scripts/: map.py
cgmap/utils/: analysis.py  atomType.py  logging.py
(+42 files in other folders)
